--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <nav class="navbar navbar-light " style="font-size: 25px; font-family: sans-serif; background-color: whitesmoke;">
 
-      <img src="https://example.com/path/to/planes_trains_autos-1 (1).jpg" width="100" height="75">
+     <img src="planes_trains_autos-1 (1).jpg" width="100" height="75">
+
 
 
 
